fix(styles): z-index изменен для nav

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -98,6 +98,7 @@
       width: 100%;
       max-width: 200px;
       border-radius: 15px;
+      z-index: 99;
 
       &--open {
         display: flex;
